added meta keywords and description

--- a/server/src/main/resources/messages_de.properties
+++ b/server/src/main/resources/messages_de.properties
@@ -11,8 +11,10 @@ index.cols.maxBuyer=H\u00f6chster K\u00e4ufer
 index.cols.avgBuyer=Durchschn. K\u00e4ufer
 index.cols.minSeller=Niedrigster Verk.
 index.cols.avgSeller=Durchschn. Verk.
+index.description=gw2trades.de ist eine Wirtschaftsdatenbank die dir vollen Zugriff auf alle Infos zu Item-Preisen gibt damit du den h\u00f6chsten Profit machen kannst.
 
 details.title=Details f\u00fcr {0}
+details.description=Details f\u00fcr {0}
 details.item.levelReq=Level-Anforderung
 details.links.gw2wiki=Link zum Guild Wars 2 Wiki
 details.links.gw2treasures=Link zu gw2treasures.com
@@ -44,3 +46,6 @@ details.lines.buyers=K\u00e4ufer
 
 frame.impressum=Impressum
 frame.contactMe=Kontakt
+
+impressum.title=Impressum
+impressum.description=Impressum von gw2trades.de
