--- a/server/src/main/resources/messages_en.properties
+++ b/server/src/main/resources/messages_en.properties
@@ -11,8 +11,10 @@ index.cols.maxBuyer=Highest buyer
 index.cols.avgBuyer=Avg. buyer
 index.cols.minSeller=Lowest seller
 index.cols.avgSeller=Avg. seller
+index.description=gw2trades.de enables you to make the most profit by providing you all items from the Guild Wars 2 Trading Post and their relevant price information.
 
 details.title=Details for {0}
+details.description=Details for {0}
 details.item.levelReq=Level requirements
 details.links.gw2wiki=Link to the official Guild Wars 2 Wiki
 details.links.gw2treasures=Link to gw2treasures.com for further item information
@@ -45,3 +47,5 @@ details.lines.buyers=Buyers
 frame.impressum=Impressum
 frame.contactMe=Contact me
 
+impressum.title=Impressum
+impressum.description=Impressum of gw2trades.de
