added profit line

--- a/server/src/main/resources/messages_de.properties
+++ b/server/src/main/resources/messages_de.properties
@@ -33,6 +33,7 @@ details.tooltip.avgSeller=Durchschn. Verk.:
 details.tooltip.minSeller=Niedrigster Verk.:
 details.tooltip.avgBuyer=Durchschn. K\u00e4ufer:
 details.tooltip.maxBuyer=H\u00f6chster K\u00e4ufer:
+details.tooltip.profit=Profit:
 details.timeframes.1m=1 Monat
 details.timeframes.7d=1 Woche
 details.timeframes.3d=3 Tage
@@ -43,6 +44,7 @@ details.lines.maxBuyers=H\u00f6chster K\u00e4ufer
 details.lines.avgBuyers=Durchschn. K\u00e4ufer
 details.lines.sellers=Verk\u00e4ufer
 details.lines.buyers=K\u00e4ufer
+details.lines.profit=Profit
 
 frame.impressum=Impressum
 frame.contactMe=Kontakt
