--- a/server/src/main/resources/messages_en.properties
+++ b/server/src/main/resources/messages_en.properties
@@ -33,6 +33,7 @@ details.tooltip.avgSeller=Avg. seller:
 details.tooltip.minSeller=Lowest seller:
 details.tooltip.avgBuyer=Avg. buyer:
 details.tooltip.maxBuyer=Highest buyer:
+details.tooltip.profit=Profit:
 details.timeframes.1m=1 Month
 details.timeframes.7d=1 Week
 details.timeframes.3d=3 Days
@@ -43,6 +44,7 @@ details.lines.maxBuyers=Max. buyers
 details.lines.avgBuyers=Avg. buyers
 details.lines.sellers=Sellers
 details.lines.buyers=Buyers
+details.lines.profit=Profit
 
 frame.impressum=Impressum
 frame.contactMe=Contact me
