improved seo meta description for details

--- a/server/src/main/resources/messages_de.properties
+++ b/server/src/main/resources/messages_de.properties
@@ -14,7 +14,7 @@ index.cols.avgSeller=Durchschn. Verk.
 index.description=gw2trades.de ist eine Wirtschaftsdatenbank die dir vollen Zugriff auf alle Infos zu Item-Preisen gibt damit du den h\u00f6chsten Profit machen kannst.
 
 details.title=Details f\u00fcr {0}
-details.description=Details f\u00fcr {0}
+details.description={0} f\u00fcr {3} Profit, niedrigster K\u00e4ufer f\u00fcr {1} und h\u00f6chster Verk\u00e4ufer f\u00fcr {2}
 details.item.levelReq=Level-Anforderung
 details.links.gw2wiki=Link zum Guild Wars 2 Wiki
 details.links.gw2treasures=Link zu gw2treasures.com
