--- a/server/src/main/resources/messages_en.properties
+++ b/server/src/main/resources/messages_en.properties
@@ -14,7 +14,7 @@ index.cols.avgSeller=Avg. seller
 index.description=gw2trades.de enables you to make the most profit by providing you all items from the Guild Wars 2 Trading Post and their relevant price information.
 
 details.title=Details for {0}
-details.description=Details for {0}
+details.description={0} with a profit of {3}, highest buyer is {1} and lowest seller is {2}
 details.item.levelReq=Level requirements
 details.links.gw2wiki=Link to the official Guild Wars 2 Wiki
 details.links.gw2treasures=Link to gw2treasures.com for further item information
