show basic attributes for Armors

--- a/server/src/main/resources/messages_de.properties
+++ b/server/src/main/resources/messages_de.properties
@@ -45,6 +45,32 @@ details.lines.avgBuyers=Durchschn. K\u00e4ufer
 details.lines.sellers=Verk\u00e4ufer
 details.lines.buyers=K\u00e4ufer
 details.lines.profit=Profit
+details.attr.title=Attribute
+details.attr.Power=St\u00e4rke
+details.attr.ConditionDamage=Zustandsschaden
+details.attr.CritDamage=Kritischer Schaden
+details.attr.Healing=Heilkraft
+details.attr.Precision=Pr\u00e4zision
+details.attr.Toughness=Z\u00e4higkeit
+details.attr.Vitality=Vitalit\u00e4t
+details.rarity.Basic=Einfach
+details.rarity.Fine=Edel
+details.rarity.Masterwork=Meisterwerk
+details.rarity.Rare=Selten
+details.rarity.Exotic=Exotisch
+details.rarity.Ascended=Aufgestiegen
+details.rarity.Junk=Schrott
+details.rarity.Legendary=Legendär
+details.weightClass.Heavy=Schwer
+details.weightClass.Medium=Mittel
+details.weightClass.Light=Leicht
+details.slot.Boots=Fu\u00dc-R\u00fcstung
+details.slot.Coat=Brust-R\u00fcstung
+details.slot.Gloves=Hand-R\u00fcstung
+details.slot.Helm=Kopf-R\u00fcstung
+details.slot.HelmAquatic=Kopf-R\u00fcstung
+details.slot.Leggings=Bein-R\u00fcstung
+details.slot.Shoulders=Schulter-R\u00fcstung
 
 frame.impressum=Impressum
 frame.contactMe=Kontakt
