--- a/server/src/main/resources/messages_en.properties
+++ b/server/src/main/resources/messages_en.properties
@@ -45,6 +45,32 @@ details.lines.avgBuyers=Avg. buyers
 details.lines.sellers=Sellers
 details.lines.buyers=Buyers
 details.lines.profit=Profit
+details.attr.title=Attributes
+details.attr.Power=Power
+details.attr.ConditionDamage=Condition damage
+details.attr.CritDamage=Critical damage
+details.attr.Healing=Healing
+details.attr.Precision=Precision
+details.attr.Toughness=Toughness
+details.attr.Vitality=Vitality
+details.rarity.Basic=Basic
+details.rarity.Fine=Fine
+details.rarity.Masterwork=Masterwork
+details.rarity.Rare=Rare
+details.rarity.Exotic=Exotic
+details.rarity.Ascended=Ascended
+details.rarity.Junk=Junk
+details.rarity.Legendary=Legendary
+details.weightClass.Heavy=Heavy
+details.weightClass.Medium=Medium
+details.weightClass.Light=Light
+details.slot.Boots=Foot Armor
+details.slot.Coat=Chest Armor
+details.slot.Gloves=Hand Armor
+details.slot.Helm=Head Armor
+details.slot.HelmAquatic=Breathing apparatus
+details.slot.Leggings=Leg Armor
+details.slot.Shoulders=Shoulder Armor
 
 frame.impressum=Impressum
 frame.contactMe=Contact me
