added in-page navigation, display weapon types

--- a/server/src/main/resources/messages_de.properties
+++ b/server/src/main/resources/messages_de.properties
@@ -45,6 +45,9 @@ details.lines.avgBuyers=Durchschn. K\u00e4ufer
 details.lines.sellers=Verk\u00e4ufer
 details.lines.buyers=K\u00e4ufer
 details.lines.profit=Profit
+details.area.attributes=Eigenschaften
+details.area.trading=Handel
+details.area.graphs=Historie
 details.attr.title=Attribute
 details.attr.Power=St\u00e4rke
 details.attr.ConditionDamage=Zustandsschaden
@@ -71,6 +74,29 @@ details.slot.Helm=Kopf-R\u00fcstung
 details.slot.HelmAquatic=Kopf-R\u00fcstung
 details.slot.Leggings=Bein-R\u00fcstung
 details.slot.Shoulders=Schulter-R\u00fcstung
+details.slot.Axe=Axt
+details.slot.Dagger=Dolch
+details.slot.Mace=Streitkolben
+details.slot.Pistol=Pistole
+details.slot.Scepter=Szepter
+details.slot.Sword=Schwert
+details.slot.Focus=Fokus
+details.slot.Shield=Schild
+details.slot.Torch=Fackel
+details.slot.Warhorn=Kriegshorn
+details.slot.Greatsword=Gro\u00dcschwert
+details.slot.Hammer=Hammer
+details.slot.LongBow=Langbogen
+details.slot.Rifle=Gewehr
+details.slot.ShortBow=Kurzbogen
+details.slot.Staff=Stab
+details.slot.Harpoon=Harpunenschleuder
+details.slot.Speargun=Speer
+details.slot.Trident=Dreizack
+details.slot.LargeBundle=Large Bundle FIXME
+details.slot.SmallBundle=SmallBundle FIXME
+details.slot.Toy=Spielzeug FIXME
+details.slot.TwoHandedToy=Zweihandspielzeug FIXME
 
 frame.impressum=Impressum
 frame.contactMe=Kontakt
