--- a/server/src/main/resources/messages_en.properties
+++ b/server/src/main/resources/messages_en.properties
@@ -45,6 +45,9 @@ details.lines.avgBuyers=Avg. buyers
 details.lines.sellers=Sellers
 details.lines.buyers=Buyers
 details.lines.profit=Profit
+details.area.attributes=Attributes
+details.area.trading=Trading
+details.area.graphs=History
 details.attr.title=Attributes
 details.attr.Power=Power
 details.attr.ConditionDamage=Condition damage
@@ -71,6 +74,29 @@ details.slot.Helm=Head Armor
 details.slot.HelmAquatic=Breathing apparatus
 details.slot.Leggings=Leg Armor
 details.slot.Shoulders=Shoulder Armor
+details.slot.Axe=Axe
+details.slot.Dagger=Dagger
+details.slot.Mace=Mace
+details.slot.Pistol=Pistol
+details.slot.Scepter=Scepter
+details.slot.Sword=Sword
+details.slot.Focus=Focus
+details.slot.Shield=Shield
+details.slot.Torch=Torch
+details.slot.Warhorn=Warhorn
+details.slot.Greatsword=Greatsword
+details.slot.Hammer=Hammer
+details.slot.LongBow=Long bow
+details.slot.Rifle=Rifle
+details.slot.ShortBow=Short bow
+details.slot.Staff=Staff
+details.slot.Harpoon=Harpoon
+details.slot.Speargun=Speargun
+details.slot.Trident=Trident
+details.slot.LargeBundle=Large Bundle FIXME
+details.slot.SmallBundle=SmallBundle FIXME
+details.slot.Toy=Spielzeug FIXME
+details.slot.TwoHandedToy=Zweihandspielzeug FIXME
 
 frame.impressum=Impressum
 frame.contactMe=Contact me
