--- a/server/src/main/resources/messages_de.properties
+++ b/server/src/main/resources/messages_de.properties
@@ -97,6 +97,14 @@ details.slot.LargeBundle=Large Bundle FIXME
 details.slot.SmallBundle=SmallBundle FIXME
 details.slot.Toy=Spielzeug FIXME
 details.slot.TwoHandedToy=Zweihandspielzeug FIXME
+details.slot.Default=
+details.slot.Gem=Edelstein
+details.slot.Rune=Rune
+details.slot.Sigil=Sigil
+details.slot.Ring=Ring
+details.slot.Accessory=Accessoir
+details.slot.Amulet=Amulett
+details.weaponStrength=Waffenst\u00e4rke: {0} - {1}
 
 frame.impressum=Impressum
 frame.contactMe=Kontakt
