--- a/server/src/main/resources/messages_en.properties
+++ b/server/src/main/resources/messages_en.properties
@@ -97,6 +97,15 @@ details.slot.LargeBundle=Large Bundle FIXME
 details.slot.SmallBundle=SmallBundle FIXME
 details.slot.Toy=Spielzeug FIXME
 details.slot.TwoHandedToy=Zweihandspielzeug FIXME
+details.slot.Default=
+details.slot.Gem=Gem
+details.slot.Rune=Rune
+details.slot.Sigil=Sigil
+details.slot.Ring=Ring
+details.slot.Accessory=Accessory
+details.slot.Amulet=Amulet
+details.weaponStrength=Weapon Strength: {0} - {1}
+
 
 frame.impressum=Impressum
 frame.contactMe=Contact me
