added required level to details tooltip box, changed weapon strength display

--- a/server/src/main/resources/messages_de.properties
+++ b/server/src/main/resources/messages_de.properties
@@ -104,7 +104,8 @@ details.slot.Sigil=Sigil
 details.slot.Ring=Ring
 details.slot.Accessory=Accessoir
 details.slot.Amulet=Amulett
-details.weaponStrength=Waffenst\u00e4rke: {0} - {1}
+details.weaponStrength=Waffenst\u00e4rke:
+details.requiredLevel=Ben\u00f6tigte Stufe:
 
 frame.impressum=Impressum
 frame.contactMe=Kontakt
