--- a/server/src/main/resources/messages_en.properties
+++ b/server/src/main/resources/messages_en.properties
@@ -104,7 +104,8 @@ details.slot.Sigil=Sigil
 details.slot.Ring=Ring
 details.slot.Accessory=Accessory
 details.slot.Amulet=Amulet
-details.weaponStrength=Weapon Strength: {0} - {1}
+details.weaponStrength=Weapon Strength:
+details.requiredLevel=Required Level:
 
 
 frame.impressum=Impressum
