output recipes the current item is used by

--- a/server/src/main/resources/messages_de.properties
+++ b/server/src/main/resources/messages_de.properties
@@ -48,6 +48,7 @@ details.lines.profit=Profit
 details.area.attributes=Eigenschaften
 details.area.trading=Handel
 details.area.graphs=Historie
+details.area.crafting=Herstellung
 details.attr.title=Attribute
 details.attr.Power=St\u00e4rke
 details.attr.ConditionDamage=Zustandsschaden
