--- a/server/src/main/resources/messages_en.properties
+++ b/server/src/main/resources/messages_en.properties
@@ -48,6 +48,7 @@ details.lines.profit=Profit
 details.area.attributes=Attributes
 details.area.trading=Trading
 details.area.graphs=History
+details.area.crafting=Crafting
 details.attr.title=Attributes
 details.attr.Power=Power
 details.attr.ConditionDamage=Condition damage
