added section for recipes to craft the current item

--- a/server/src/main/resources/messages_de.properties
+++ b/server/src/main/resources/messages_de.properties
@@ -108,6 +108,12 @@ details.slot.Amulet=Amulett
 details.weaponStrength=Waffenst\u00e4rke:
 details.requiredLevel=Ben\u00f6tigte Stufe:
 
+details.area.attributes.noneAvailable=Dieser Gegenstand hat keine Eigenschaften.
+details.area.crafting.targetRecipes=Rezepte zur Herstellung des Gegenstands
+details.area.crafting.targetRecipes.noneAvailable=Dieser Gegenstand kann nicht hergestellt werden.
+details.area.crafting.sourceRecipes=Rezepte in denen der Gegenstand verwendet wird
+details.area.crafting.sourceRecipes.noneAvailable=Dieser Gegenstand wird in keinem Rezept ben\u00f6tigt.
+
 frame.impressum=Impressum
 frame.contactMe=Kontakt
 
