--- a/server/src/main/resources/messages_en.properties
+++ b/server/src/main/resources/messages_en.properties
@@ -108,9 +108,15 @@ details.slot.Amulet=Amulet
 details.weaponStrength=Weapon Strength:
 details.requiredLevel=Required Level:
 
+details.area.attributes.noneAvailable=This item has no attributes.
+details.area.crafting.targetRecipes=Recipes for crafting this item
+details.area.crafting.targetRecipes.noneAvailable=This item cannot be crafted.
+details.area.crafting.sourceRecipes=Recipes that use this item
+details.area.crafting.sourceRecipes.noneAvailable=This item is not used in any recipe.
 
 frame.impressum=Impressum
 frame.contactMe=Contact me
 
 impressum.title=Impressum
 impressum.description=Impressum of gw2trades.de
+
